--- a/private/profile.html
+++ b/private/profile.html
@@ -10,9 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Import Bootstrap-select library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/css/bootstrap-select.min.css">
-    <link rel="stylesheet" href="font-style.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="/font-style.css">
+    <link rel="stylesheet" href="/style.css">
+    <script src="/script.js"></script>
     <title>Profile</title>
 </head>
 <body id="body">
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand titre1" href="/">
-                    <img src="img/logos/light-logo.svg" alt="logo" id="logo" class="d-inline-block align-text-top">
+                    <img src="/img/logos/light-logo.svg" alt="logo" id="logo" class="d-inline-block align-text-top">
                     <p>Game talks</p>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
                             <ul class="navbar-nav ms-auto justify-content-end">
                                 <li class="nav-item dropdown">
                                     <a class="headline1" id="accountDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <img src="img/default-profile.png" alt="Photo de profile" class="d-inline-block profile-pic ms-auto">
+                                        <img src="/img/default-profile.png" alt="Photo de profile" class="d-inline-block profile-pic ms-auto">
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-lg-end dropdown-window-menu dropdown-profile-menu headline1" aria-labelledby="accountDropdown">
                                         <li><a class="dropdown-item" href="user-profile"><span class="icon-Profile"></span> Profile</a></li>
@@ -78,7 +78,7 @@
             <div class="profile-page-content">
                 <div class="profile-picture profile-pic-div">
 
-                        <img src="img/default-profile.png" alt="Photo de profile"
+                        <img src="/img/default-profile.png" alt="Photo de profile"
                              class="d-block profile-pic mx-auto" id="photo">
 
                 </div>
